--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
     <h1>Vs Code használata</h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nostrum quod, sequi, vel dignissimos distinctio ea excepturi similique, exercitationem animi debitis voluptatem nemo tempora non facere velit voluptatum quia. Ut!
-        Reiciendis voluptates itaque fugit ab placeat! Odit dolore eveniet sit totam! Rem aliquid quisquam atque fugiat non odio neque. Consequuntur modi debitis neque? Voluptate impedit nesciunt hic voluptatibus laudantium magni?
-        In explicabo doloribus harum alias provident rem, rerum velit, labore, corrupti minus omnis. Eligendi eos nostrum exercitationem, quaerat pariatur saepe alias enim molestias voluptas fugit minima excepturi architecto? Quod, fugit.
+       Kicserélem a lorem ipsumot értelmes szövegre.
     </p>
     <img src="kepek/kazuha_genshin_impact.avif" alt="jatek 1">
     <img src="kepek/1345107.jpeg" alt="jatek 2">
